# SICP-Practise

./: .gitignore  README.md
Interpreter/: README.md
Interpreter/code/: AST.hs  Error.hs  Eval.hs  Main.hs  Makefile  Parse.hs  TinySCM.cabal
SICP/: chap2.scm  chap3.scm  ex1.scm  utils.scm
